[package]
name = "xdevs"
version = "0.2.0"
authors = ["Román Cárdenas <rcardenas.rod@gmail.com>"]
edition = "2021"
description = "An open source DEVS M&S framework."
readme = "README.md"
repository = "https://github.com/iscar-ucm/xdevs.rs"
license = "LGPL-3.0-or-later"
keywords = ["DEVS", "modeling", "simulation"]
categories = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.6", optional = true }

[features]
par_any = ["rayon"]
par_start = ["par_any"]
par_collection = ["par_any"]
par_eoc = ["par_any"]
par_xic = ["par_any"]
par_transition = ["par_any"]
par_stop = ["par_any"]
par_xxc = ["par_eoc", "par_xic"]
par_sim_no_xxc = ["par_collection", "par_transition"]
par_sim = ["par_sim_no_xxc", "par_xxc"]
par_all_no_xxc = ["par_start", "par_sim_no_xxc", "par_stop"]
par_all = ["par_all_no_xxc", "par_xxc"]

[profile.release]
lto = true
panic = "unwind"
