[package]
name = "xdevs"
version = "0.4.0-alpha"
authors = ["Román Cárdenas <rcardenas.rod@gmail.com>"]
edition = "2021"
description = "An open source DEVS M&S framework."
readme = "README.md"
repository = "https://github.com/iscar-ucm/xdevs.rs"
license = "LGPL-3.0-or-later"
keywords = ["DEVS", "modeling", "simulation"]
categories = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.6", optional = true }
cpu-time = { version = "1.0", optional = true }

[features]
devstone_busy = ["cpu-time"]
par_start = ["rayon"]
par_collection = ["rayon"]
par_eoc = ["rayon"]
par_xic = ["rayon"]
par_transition = ["rayon"]
par_stop = ["rayon"]
par_xxc = ["par_eoc", "par_xic"]
par_sim_no_xxc = ["par_collection", "par_transition"]
par_sim = ["par_sim_no_xxc", "par_xxc"]
par_all_no_xxc = ["par_start", "par_sim_no_xxc", "par_stop"]
par_all = ["par_all_no_xxc", "par_xxc"]

[[example]]
name = "devstone"

[[example]]
name = "gpt_efp"

[profile.release]
lto = true
panic = "unwind"

[package.metadata.docs.rs]
features = ["par_all"]
