[package]
name = "xdevs"
version = "0.3.0"
authors = ["Román Cárdenas <rcardenas.rod@gmail.com>"]
edition = "2021"
description = "An open source DEVS M&S framework."
readme = "README.md"
repository = "https://github.com/iscar-ucm/xdevs.rs"
license = "LGPL-3.0-or-later"
keywords = ["DEVS", "modeling", "simulation"]
categories = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = { version = "1.0", optional = true }
rayon = { version = "1.6", optional = true }
tokio = { version = "1.42", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3" }

[features]
devstone_busy = ["cpu-time"]
par_any = ["rayon"]
par_start = ["par_any"]
par_collection = ["par_any"]
par_transition = ["par_any"]
par_stop = ["par_any"]
par_all_no_couplings = ["par_start", "par_collection", "par_transition", "par_stop"]
par_couplings = ["par_any"]
par_all = ["par_all_no_couplings", "par_couplings"]
rt = ["tokio", "tracing"]

[package.metadata.docs.rs]
features = ["par_all", "rt"]
