[package]
name = "xdevs_utils"
version = "0.1.0"
authors = ["Román Cárdenas <rcardenas.rod@gmail.com>"]
edition = "2021"
description = "Utility extensions for the xDEVS simulator."
readme = "README.md"
repository = "https://github.com/iscar-ucm/xdevs.rs"
license = "LGPL-3.0-or-later"
keywords = ["DEVS", "modeling", "simulation"]
categories = ["simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdevs = { version = "0.3.0", path = "../xdevs" }
rumqttc = { version = "0.24", optional = true}
tokio = { version = "1.42", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[features]
mqtt = ["xdevs/async_rt", "rumqttc", "tokio", "tracing"]

[[bin]]
name = "mqtt_sniffer"
required-features = ["mqtt"]
path = "src/bin/mqtt_sniffer.rs"
